--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Here is a guide to show what components have changed from Foundation 5 to Foundation 6">
+    <meta name="keywords" content="HTML,CSS,Foundation,Zurb,Responsive,6,5,JavaScript,Differentials">
+    <meta name="author" content="Elijah Townsend">
     <title>Foundation Differentials</title>
     <link rel="stylesheet" href="css/foundation5.css" />
     <link rel="stylesheet" href="css/foundation6.css" />
